v.2.2.1
   - Added FileInput control for picking files across settings.
   - Added a new input on Global Settings to chose which executable file will be called on clicking "Open in IDE"

v.2.2.0
   - First public stable Hub release.
   - Version number aligned with MDK2 CLI/package line (jump from prerelease 1.x to 2.2.x) to reduce cross-tool version confusion.
   - Hub and CLI are still versioned and released separately.

v.1.0.0-pre.44
   - New icon by Yellow51
   
v.1.0.0-pre.43
   - Added Mixin project template support.
   - Project icons now consistent across the application.
   - Last used project location now remembered per template type.
   - Added macro editor for custom text replacement in projects.
   - Macros can be configured separately for shared (Main) and local (developer-specific) settings.
   - Added list editors for Namespaces and Ignores configuration.
   - Configuration editors now include descriptions explaining their purpose.

v.1.0.0-pre.42
   - Package update checks now respond to refresh command.
   - Improved visual spacing consistency between action items.

v.1.0.0-pre.41
   - Interactive notifications pause timeout when hovering to allow reading and clicking actions.

v.1.0.0-pre.40
   - Project thumbnails now displayed in project list (thumb.png or thumb.jpg in project directory).
   - Redesigned notification snackbars with horizontal layout for improved compactness.
   - Added configurable deployment notification timeout in Global Settings > Advanced.
   - Quick confirmation messages now display as toast-style notifications without close button.
   - Removed "Show me" button from deployment notifications.
   - Updated Hub application icon.

v.1.0.0-pre.39
   - Fixed Hub ignoring global custom auto output paths when resolving script/mod locations.
   - Copy to clipboard, Show me, and deployment status now respect custom auto paths.
   - Fixed excessive top margin above action items in project actions panel.

v.1.0.0-pre.38